# VEP_Classifier

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
app/: app.py  predict_from_raw.py  train_and_save_full_model.ipynb
app/saved_models/: combined_all_devices_2class_20260612_185516.keras  combined_all_devices_2class_20260612_185516_metadata.json  combined_all_devices_2class_20260612_185516_scaler.pkl
app/templates/: index.html
classifiers/: CNN_classifier.py  LDA_classifier.py  RandomForest_classifier.py  SVM_classifier.py
core/: config.py  helpers.py  preprocessing.py
data/example_files/: BC_&_RGC_1.32mWmm^2.csv  BC_&_RGC_1.39mWmm^2.csv  BC_&_RGC_1.44mWmm^2.csv  BC_&_RGC_1.51mWmm^2.csv  BC_&_RGC_1.57mWmm^2.csv  BC_&_RGC_2.33mWmm^2.csv  BC_&_RGC_2.49mWmm^2.csv  BC_only_1.09mWmm^2.csv  BC_only_1.17mWmm^2.csv  BC_only_1.25mWmm^2.csv  RGC_only_2.1mWmm^2.csv
experiments/: compare_models.py  hyperparameter_search.py
notebooks/: 1DCNN_IG_analysis.ipynb  1DCNN_results.ipynb  LDA_results.ipynb  SVM_results.ipynb  data_visualization.ipynb  hyperparam_and_modelcomparison_analysis.ipynb  preprocessing.ipynb  randomforest_results.ipynb
